# aup-learning-cloud

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  README.md  auplc-installer  pyproject.toml  requirements.txt
.github/: build-config.json
.github/workflows/: docker-build.yml  lint.yml  pack-bundle.yml
deploy/: README.md
deploy/ansible/: README.md
deploy/k8s/: README.md
deploy/k8s/nfs-provisioner/: README.md
dockerfiles/: Makefile
dockerfiles/Base/: Dockerfile.rocm  README.md
dockerfiles/Courses/CV/: Dockerfile  build.sh
dockerfiles/Courses/DL/: Dockerfile  build.sh
dockerfiles/Courses/LLM/: Dockerfile  build.sh
dockerfiles/Courses/PhySim/: Dockerfile  build.sh
dockerfiles/Courses/SHT-HIP/: Dockerfile  Dockerfile.old  build.sh
dockerfiles/Courses/SHT-PROF/: Dockerfile  build.sh
dockerfiles/Hub/: Dockerfile  build.sh
projects/PhySim/: PhySim01_hello_genesis.ipynb  PhySim02_control_your_robot.ipynb  PhySim03_motion_planning.ipynb  PhySim04_parallel_simulation.ipynb
projects/SHT-HIP/: CS290W-1.ipynb
projects/SHT-HIP/exercises/03_complete_square_elements/: square_elements.cpp
projects/SHT-HIP/exercises/06_hipify_pingpong/: hipify-perl
projects/SHT-PROF/: README.md
projects/SHT-PROF/hip_matmul/: README.md
projects/SHT-PROF/hip_matmul/fp32_sgemm_amd/: .gitignore  LICENSE  README.md  build.sh  kernel6.hsaco  kernel7.hsaco  kernel8.hsaco
projects/SHT-PROF/hip_matmul/notebooks/: sghmatmul-tutorial.ipynb
projects/SHT-PROF/hip_memory_level/: hip_memory_level.ipynb  hip_memory_level.md  host_main.cpp
projects/SHT-PROF/hip_memory_level/src/: MemoryLevelSpeedTest.hip
projects/SHT-PROF/rocprofv3/: .gitignore  rocprofv3-tutorial.ipynb
runtime/: values-multi-nodes.yaml.example  values.yaml
runtime/chart/: .helmignore  Chart.yaml  values.schema.json  values.schema.yaml  values.yaml
runtime/chart/templates/: NOTES.txt
runtime/chart/templates/hub/: configmap.yaml  cronjob-quota-refresh.yaml  deployment.yaml  secret-admin.yaml  secret-git-token.yaml
runtime/chart/templates/proxy/: service.yaml
runtime/hub/: requirements.txt
runtime/hub/core/: __init__.py  config.py  database.py  handlers.py  jupyterhub_config.py  setup.py  z2jh.py
runtime/hub/core/authenticators/: __init__.py  auto_login.py  firstuse.py  github_oauth.py  jwt.py  migrate.py  models.py  multi.py
runtime/hub/core/quota/: __init__.py  (+4 more)
runtime/hub/frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
scripts/: build.sh  generate_values_schema.py  helm_upgrade.bash
source/: conf.py
source/getting-started/: index.md  quick-start.md
source/installation/: quick-start.md  single-node.md
source/introduction/: overview.md
(+63 files in other folders)
