[project]
name = "aup-learning-cloud"
version = "0.1.0"
description = "AUP Learning Cloud - JupyterHub deployment for AI education"
requires-python = ">=3.10"

[tool.ruff]
# Target Python version
target-version = "py310"

# Line length
line-length = 120

# Exclude directories
exclude = [
    ".git",
    ".github",
    "__pycache__",
    ".venv",
    "venv",
    "node_modules",
    "*.egg-info",
    "projects/CV/DL08_Diffusion_Model_new.ipynb",  # Work in progress with syntax errors
]

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "B905",   # zip() without strict= (Python 3.10+ only)
    "SIM108", # Use ternary operator (readability preference)
]

# Notebook-specific rules
[tool.ruff.lint.per-file-ignores]
"projects/**/*.ipynb" = [
    "E402",   # Module level import not at top of file (common in notebooks)
    "F403",   # 'from module import *' used (teaching notebooks)
    "F405",   # Name may be undefined (due to import *)
    "E741",   # Ambiguous variable name (l, O, I are common in teaching)
    "B007",   # Loop variable not used (common in notebooks)
    "F841",   # Local variable assigned but never used (exploratory coding)
    "E731",   # Lambda assignment (teaching pattern)
    "F821",   # Undefined name (may be defined in earlier cell)
    "F811",   # Redefinition (notebooks often redefine in different cells)
    "SIM115", # Use context manager for files (intentional stdout redirect)
    "UP031",  # Use f-string instead of % format (teaching older style)
    "E722",   # Bare except (notebooks may use for demo purposes)
    "F401",   # Imported but unused (conditional imports in notebooks)
]

"runtime/chart/**/*.py" = [
    "E402",   # Module level import not at top of file (common in notebooks)
    "F821",   # Undefined name (get_config is a JupyterHub magic function)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["jupyterhub_config", "z2jh"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Unix-style line endings
line-ending = "auto"
